# qnx_tools

./: Makefile  Readme.txt  SimulationOnlyVar.cpp  cache_test.c  child_proc.c  coroutine.c  devmem.c  drag_rgb.c  fpu_test.c  fpu_test_aarch64le  fpu_test_disassemble  hello.c  hello.cpp  intr_lock.c  nemo_220x176.rgba  showmem.c  simple_fork.c  virt2phy.c
c++_sessions/daily_cxx/: README.md
c++_sessions/daily_cxx/2019_09_27_talk_1/: README.md  template_meta_programming.cpp
c++_sessions/daily_cxx/2019_09_30_talk_2/: CMakeLists.txt  README.md
c++_sessions/daily_cxx/2019_10_01_talk_3/: CMakeLists.txt  README.md  concepts.cpp  msvc_142-win-x86_64-concepts-sln.initialcache.cmake
c++_sessions/daily_cxx/2019_10_14_talk_4/: CMakeLists.txt  README.md  cpp_core_guidelines_c_67.m.cpp  msvc-ninja.initialcache.cmake
c++_sessions/daily_cxx/2019_10_17_talk_5/: README.md
c++_sessions/daily_cxx/2019_10_21_talk_6/: CMakeLists.txt  README.md  move_and_embedded_part_2.m.cpp
c++_sessions/daily_cxx/2019_10_22_talk_7/: README.md
c++_sessions/daily_cxx/2019_10_28_talk_8/: README.md
c++_sessions/daily_cxx/2019_11_06_talk_9/: CMakeLists.txt  private_state_module.h  public_state_module.cpp  public_state_module.h  state_pattern.m.cpp
c++_sessions/daily_cxx/2019_11_07_talk_10/: README.md  slides.md
c++_sessions/daily_cxx/2019_11_08_talk_11/: CMakeLists.txt  README.md  chain_of_responsibility.m.cpp
c++_sessions/daily_cxx/2019_11_11_talk_12/: slides.md
c++_sessions/daily_cxx/2019_11_12_talk_12/: README.md
c++_sessions/daily_cxx/2019_11_18_talk_13/: CMakeLists.txt  iterator_pattern.m.cpp  iterator_protocol.hpp
c++_sessions/daily_cxx/2019_12_05_talk_14/: CMakeLists.txt  README.md  fiasco.cpp  fiasco.hpp
c++_sessions/daily_cxx/2019_12_19_talk_15/: CMakeLists.txt  dxx_con_globals.cpp  dxx_con_globals.hpp  dxx_iofu_globals.cpp  dxx_iofu_globals.hpp  dxx_ncnt_globals.cpp  dxx_ncnt_globals.hpp  dxx_raii_object.cpp  dxx_raii_object.hpp  dxx_siof_globals.cpp  dxx_siof_globals.hpp  dxx_siu_metre.cpp  dxx_siu_metre.hpp  static_initialization_order_fiasco.m.cpp
c++_sessions/daily_cxx/2020_03_03_talk_16/: README.md
c++_sessions/daily_cxx/2020_05_07_talk_17/: CMakeLists.txt  decorator.t.cpp
c++_sessions/daily_cxx/2020_05_07_talk_17/solution/: CMakeLists.txt  dec_cost_function_protocol.cpp  dec_cost_function_protocol.hpp  dec_cost_function_protocol.t.cpp  dec_output_stream_protocol.cpp  dec_output_stream_protocol.hpp  dec_output_stream_protocol.t.cpp
c++_sessions/daily_cxx/2020_05_08_talk_18/: CMakeLists.txt  slicing.t.cpp
c++_sessions/daily_cxx/2020_05_11_talk_19/: CMakeLists.txt  vad_compile_time_predicates.t.cpp
c++_sessions/daily_cxx/2020_05_12_talk_20/: CMakeLists.txt  enable_if.t.cpp
c++_sessions/daily_cxx/2020_05_14_talk_21/: CMakeLists.txt  sfinae.t.cpp
c++_sessions/daily_cxx/2020_05_15_talk_22/: CMakeLists.txt  pmi_core.cpp  pmi_core.h
c++_sessions/daily_cxx/2020_05_18_talk_23/: CMakeLists.txt  flag_enum.t.cpp
c++_sessions/daily_cxx/2020_05_19_talk_24/: CMakeLists.txt  never_mix_signed_and_unsigned.t.cpp
c++_sessions/daily_cxx/2020_05_20_talk_25/: CMakeLists.txt  vont_client.m.cpp  vont_mofu.cpp  vont_mofu.hpp  vont_registrator.cpp  vont_registrator.hpp  vont_sepa.cpp
c++_sessions/daily_cxx/2020_05_20_talk_25/discussion_peter/: CMakeLists.txt  lib1.cpp  lib2.cpp  main.cpp
c++_sessions/daily_cxx/2020_05_25_talk_26/: CMakeLists.txt  vont_client.m.cpp  vont_mofu.cpp  vont_registrator.cpp  vont_registrator.hpp  vont_sepa.cpp
c++_sessions/daily_cxx/2020_05_27_talk_27/: CMakeLists.txt  prefer_uniform_init.m.cpp  prefer_uniform_init.m.cpp.solution
c++_sessions/daily_cxx/2020_05_28_talk_28/: CMakeLists.txt  drop_default_in_switch.m.cpp
c++_sessions/daily_cxx/2020_05_29_talk_29/: CMakeLists.txt  blub.m.cpp
c++_sessions/daily_cxx/2020_06_03_talk_30/: CMakeLists.txt  error_code_client.m.cpp
c++_sessions/daily_cxx/2020_06_05_talk_31/: CMakeLists.txt  error_category_client.m.cpp
c++_sessions/daily_cxx/2020_06_08_talk_32/: CMakeLists.txt  error_condition.m.cpp
c++_sessions/daily_cxx/2020_06_09_talk_33/: CMakeLists.txt  expected.m.cpp
c++_sessions/daily_cxx/2020_06_10_talk_34/: expected.m.cpp
c++_sessions/daily_cxx/2020_06_17_talk_36/: CMakeLists.txt  void_t.m.cpp
c++_sessions/daily_cxx/2020_07_08_talk_43/: CMakeLists.txt  CTestConfig.cmake  dangling_reference.m.cpp
c++_sessions/daily_cxx/2020_07_xx_talk_46/: CMakeLists.txt  WrapCin.script.cmake  calculator.m.cpp  calculator2.m.cpp
c++_sessions/daily_cxx/2020_09_17_talk_49/: CMakeLists.txt
c++_sessions/daily_cxx/2020_09_17_talk_49/src/: store.cpp  store.h
c++_sessions/daily_cxx/2020_09_17_talk_49/test/: store_test.cpp
c++_sessions/daily_cxx/logo/: CMakeLists.txt  gen_logo.m.cpp
c++_sessions/daily_cxx/work_in_progress_simple_loop/: CMakeLists.txt  simple_loop.cpp
c++_sessions/misc/: Readme.txt  a.out  cv.cpp  static_obj.cpp  test.c  void_pointer_arithmetics.cpp
c++_sessions/session2/: AEmpty.hpp  a.out  main.cpp
c++_sessions/session3/: AEmpty.hpp  a.out  main.cpp
c++_sessions/session4/: AEmpty.hpp  Readme.txt  a.out  main.cpp  main_templete.cpp
c++_sessions/session5/: AEmpty.hpp  a.out  classB.hpp  classC.hpp  main.cpp
c++_sessions/session6/: AEmpty.hpp  README.md  main.cpp
c++_sessions/session99/: thread.cpp
leetcode/: a.out  removeDuplicates.cpp
linux_apps/debug/: ptrace_test.c
linux_apps/memory/: mallopt.c  virt_gen.c
linux_apps/perf/: cache_test.cpp
linux_apps/simple_iceoryx/: simple_roudi_reader.c
linux_apps/sync/: child_proc.c
nvsci_json/: a.out  build.sh  main.cpp  nvsci_config_json_file_provider.cpp  nvsci_mta_config.json
nvsci_json/include/: mta_config.h  mta_config_file_provider.hpp  mta_config_json_file_provider.hpp
qnx_sat/: ConnectAttach.c  Makefile  Readme  all_access  all_access.c  eh_simple  eh_simple.c  five_events  five_events.c  instrex.h  intr_lock.c  ker_calls  ker_calls.c  log  one_class  one_class.c  qnx_malloc.c  server.c  usr_simple_event  usr_simple_event.c
simple_iceoryx/: simple_roudi.h  simple_roudi_writer.c
(+55 files in other folders)
